services/media/lidarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: lidarr
      app.kubernetes.io/name: lidarr
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: false
      containers:
        - name: lidarr
          image: lidarr
          ports:
            - name: webui
              protocol: TCP
              containerPort: 8686
          readinessProbe:
            httpGet:
              path: /
              port: webui
          volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /data
            name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: data
          persistentVolumeClaim:
            claimName: lidarr-data
