services/media/lidarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/name: lidarr
  type: ClusterIP
  ports:
    - name: webui
      protocol: TCP
      port: 80
      targetPort: webui
