services/media/lidarr/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lidarr-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: lidarr
      app.kubernetes.io/name: lidarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Requests from ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx-intranet
          podSelector:
            matchLabels:
              app.kubernetes.io/part-of: ingress-nginx
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: ingress-nginx-intranet
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: webui
  
  egress:
    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: coredns
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Services controlled by lidarr
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: qbittorrent
              app.kubernetes.io/name: qbittorrent
      ports:
        - protocol: TCP
          port: webui
        - protocol: TCP
          port: http-proxy
